// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImageActions component renders properly 1`] = `
<div
  className="actionItems"
>
  <button
    className="button"
    onClick={[Function]}
    title="Click to copy the Url"
  >
    <img
      className="image"
      src="test-file-stub"
    />
  </button>
</div>
`;

exports[`ImageActions component renders properly with favorite 1`] = `
<div
  className="actionItems"
>
  <button
    className="button"
    onClick={[Function]}
    title="Click to favorite"
  >
    <img
      className="image"
      src="test-file-stub"
    />
  </button>
  <button
    className="button"
    onClick={[Function]}
    title="Click to copy the Url"
  >
    <img
      className="image"
      src="test-file-stub"
    />
  </button>
</div>
`;

exports[`ImageActions component renders properly with remove favorite 1`] = `
<div
  className="actionItems"
>
  <button
    className="button"
    onClick={[Function]}
    title="Remove from favorite"
  >
    <img
      className="image"
      src="test-file-stub"
    />
  </button>
  <button
    className="button"
    onClick={[Function]}
    title="Click to copy the Url"
  >
    <img
      className="image"
      src="test-file-stub"
    />
  </button>
</div>
`;
